--- a/ProjectTakeoff/app/src/main/AndroidManifest.xml
+++ b/ProjectTakeoff/app/src/main/AndroidManifest.xml
@@ -13,13 +13,6 @@
         android:theme="@style/Theme.ProjectTakeoff"
         tools:targetApi="31" >
         <activity
-            android:name=".ui.login.LoginActivity2"
-            android:exported="false"
-            android:label="@string/title_activity_login2" />
-        <activity
-            android:name=".view.LoginActivity"
-            android:exported="false" />
-        <activity
             android:name=".view.MainActivity"
             android:exported="true" >
             <intent-filter>
@@ -28,6 +21,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <meta-data
+            android:name="preloaded_fonts"
+            android:resource="@array/preloaded_fonts" />
     </application>
 
 </manifest>
